<resources>
    <string name="app_name">My Stories</string>
    <!-- Email -->
    <string name="email">Send email to Developer</string>
    <string name="address_email">anagnostou74@gmail.com</string>
    <string name="type">message/rfc822</string>
    <string name="favorited">Favorited</string>
    <string name="about">About</string>
    <string name="about_text"><![CDATA[ <h2>My Stories</h2>\n
    <h2>Udacity</h2>\n
    <h2>Capstone Project, Stage 2</h2>\n
    <h2>Project Overview</h2>\n
    <h3>Description</h3>\n
    Tired to read news? Looking for inspired stories and things to laugh? Get in “My stories” application and your free time will change forever! Read interesting, funny stories every day and get inspired from famous quotes.\n
    <h3>Intended User</h3>\n
    The app is addressed to the average person who wants to read or see something funny and get undistressed from every day’s pressure.\n
    <h3>Features</h3>\n
    A user will be capable to read stories, view pictures and see video. The content will be updated every day from a Firebase database.\n\n
    <h3>Worth the visit</h3>\n
    <ul><li> You can get the source code of the application in <a href="https://github.com/anagnostou74/MyStories" target="_blank">GitHub</a>.</li>\n\n
    <li> Visit <a href="https://www.udacity.com/" target="_blank">Udacity</a> to find your suitable course. #NeverStopLearning #ThankYou</li></ul>\n\n]]></string>
    <string name="about_mail">About My Stories application</string>
    <string name="main_me">I am sending you this message through My Stories app and I want…</string>
    <string name="send">Sending email</string>
    <string name="no_mail_programs">No mail programs installed</string>
    <!-- Rate the app -->
    <string name="market">market://details?id=</string>
    <string name="rate">Rate the application</string>
    <!-- Play store -->
    <string name="failed2">I could not communicate with Google Play! Check your internet connection.</string>
    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <!-- Twitter -->
    <string name="twitter">Tweets to see</string>
    <string name="timeline_empty">Tweets are coming…</string>
    <!-- Network -->
    <string name="no_network">There is no network connection</string>
    <string name="please_wait">Please wait</string>
    <!-- Authentication -->
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="disconnect">Disconnect</string>
    <string name="authentication_failed">Authentication failed.</string>
    <!-- PostActivity -->
    <string name="post_story">Post a story</string>
    <string name="post">Post</string>
    <string name="title">Title</string>
    <string name="prologue">Prologue</string>
    <string name="body">Body</string>
    <string name="epilogue">Epilogue</string>
    <string name="date">Date</string>
    <string name="user">Author name</string>
    <string name="adventure">Adventure</string>
    <string name="comedy">Comedy</string>
    <string name="fairy">Fairy Tale</string>
    <string name="fiction">Fiction</string>
    <string name="romance">Romance</string>
    <string name="thriller">Thriller</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Accumsan tortor posuere ac ut consequat semper. Cras ornare arcu dui vivamus arcu felis bibendum ut tristique. Ultricies integer quis auctor elit sed vulputate mi sit amet. Diam sit amet nisl suscipit adipiscing bibendum est. Nisi est sit amet facilisis magna etiam tempor orci. Tempor orci eu lobortis elementum nibh tellus. Mi ipsum faucibus vitae aliquet nec. Feugiat in fermentum posuere urna nec tincidunt praesent semper feugiat. Senectus et netus et malesuada fames. Etiam non quam lacus suspendisse. Feugiat scelerisque varius morbi enim nunc. Eleifend donec pretium vulputate sapien. Tristique senectus et netus et malesuada fames. Scelerisque varius morbi enim nunc faucibus a. Quam adipiscing vitae proin sagittis nisl. Amet aliquam id diam maecenas ultricies. Est sit amet facilisis magna etiam tempor orci eu. Sed nisi lacus sed viverra tellus in hac. In cursus turpis massa tincidunt dui.

Eu volutpat odio facilisis mauris sit amet. Ultricies tristique nulla aliquet enim tortor at. Nec sagittis aliquam malesuada bibendum. Diam vulputate ut pharetra sit amet aliquam id diam. Turpis egestas pretium aenean pharetra. Non sodales neque sodales ut etiam sit amet nisl. Pellentesque habitant morbi tristique senectus et netus et malesuada fames. Neque aliquam vestibulum morbi blandit cursus. Vel facilisis volutpat est velit egestas dui. Amet aliquam id diam maecenas. Ut sem viverra aliquet eget sit amet tellus cras. Nulla porttitor massa id neque aliquam vestibulum morbi. Mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus et. Lorem ipsum dolor sit amet consectetur adipiscing elit pellentesque habitant. Lacus laoreet non curabitur gravida arcu.

Elit ullamcorper dignissim cras tincidunt lobortis. Mollis nunc sed id semper. Amet facilisis magna etiam tempor. Maecenas accumsan lacus vel facilisis volutpat est velit. Suspendisse sed nisi lacus sed viverra tellus in hac. Ac odio tempor orci dapibus ultrices in iaculis. Nunc sed blandit libero volutpat sed cras ornare arcu. Odio euismod lacinia at quis risus sed vulputate. Aliquam sem et tortor consequat id porta nibh venenatis cras. Eget est lorem ipsum dolor. Facilisis sed odio morbi quis commodo odio. Lorem ipsum dolor sit amet. Porttitor leo a diam sollicitudin tempor id eu. Sem viverra aliquet eget sit amet tellus cras. Pellentesque eu tincidunt tortor aliquam. Duis ultricies lacus sed turpis tincidunt. Sit amet risus nullam eget felis.

Cras semper auctor neque vitae tempus quam. Egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Tellus pellentesque eu tincidunt tortor. Cursus turpis massa tincidunt dui ut ornare lectus sit. Risus in hendrerit gravida rutrum. Iaculis nunc sed augue lacus viverra vitae congue eu consequat. Interdum consectetur libero id faucibus. Leo integer malesuada nunc vel risus commodo viverra maecenas. Venenatis cras sed felis eget. Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium. Sed felis eget velit aliquet sagittis id consectetur purus. Congue eu consequat ac felis donec et odio pellentesque diam. Quisque id diam vel quam. Massa massa ultricies mi quis. Ut consequat semper viverra nam libero justo laoreet sit amet. Morbi tincidunt ornare massa eget. Suspendisse potenti nullam ac tortor vitae purus faucibus ornare. Sagittis nisl rhoncus mattis rhoncus urna neque viverra justo nec. Urna et pharetra pharetra massa massa ultricies mi quis hendrerit.

Hac habitasse platea dictumst vestibulum rhoncus. In hac habitasse platea dictumst quisque. Posuere urna nec tincidunt praesent semper feugiat nibh. Massa tempor nec feugiat nisl pretium fusce id velit ut. Massa vitae tortor condimentum lacinia quis vel eros donec. Id nibh tortor id aliquet lectus proin. Iaculis at erat pellentesque adipiscing commodo elit at. Egestas pretium aenean pharetra magna. Nullam ac tortor vitae purus faucibus. Est pellentesque elit ullamcorper dignissim. Urna id volutpat lacus laoreet non curabitur gravida arcu. Eget felis eget nunc lobortis mattis aliquam faucibus purus. Dignissim suspendisse in est ante in nibh. Nibh tellus molestie nunc non blandit massa enim nec. Laoreet non curabitur gravida arcu ac tortor dignissim convallis aenean. Elit ullamcorper dignissim cras tincidunt.</string>

</resources>
