<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/app_name" />
        <item
            android:id="@+id/nav_post"
            android:icon="@drawable/ic_library_add_24dp"
            android:title="@string/post_story" />
        <item
            android:id="@+id/nav_twitter"
            android:icon="@drawable/ic_menu_twitter"
            android:title="@string/twitter" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/log_in" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/log_out" />

    </group>


</menu>
